     purpose.
   * Add RON to locale/iso-4217.def and bump LOCALES_COMPAT_VER to 2.3.6-2.
   * Fix thousand separator for de_CH, and let other Swiss locales copy
     de_CH for LC_NUMERIC and LC_MONETARY sections.  (Closes: #345481)
   * Apply a patch from Fedora to define AM/PM strings in cy_GB and en_GB
     locales.  (Closes: #240901)
   * Add an "All locales" option to the locales/locales_to_be_generated
     template.  When it is selected, /etc/locale.gen is a symlink to
     /usr/share/i18n/SUPPORTED.  (Closes: #321580, #323013)
   * Updated debconf translations:
    - Brazilian Portuguese, by André Luís Lopes  (Closes: #352416)
    - French, by Denis Barbier
    - Swedish, by Daniel Nylander

  [ Clint Adams ]
  * Add hurd-getresuid-dyslexia.diff (fixes incorrect ordering of
    arguments) with patch from Samuel Thibault.  (Closes: #352500)
  * Add hppa-no-ldbl-128.diff (stops implying that PA needs
    128-bit long double support in glibc) from Aurelien Jarno.
    (Closes: #344836).
  * debian/local/manpages/locale.1: remove double quotes from
    synopsis.  (Closes: #352597)
    
  [ Aurelien Jarno ]
  * Move dependency on lib64gcc1 from libc6-amd64 to libc6-dev-amd64 to 
    avoid a dependency loop.  (Closes: #352263)
  * Remove the patch to install the libc into /lib instead of /lib64 on
    amd64 and move files after the call to 'make install'. This fixes 
    the wrong dynamic linker path for libc objects.  (Closes: #325226)
  * Use sed and test in /etc/init.d/glibc.sh to compare kernel versions.
    Put the Debian architecture name in the script at build time instead
    of using 'dpkg --print-architecture'. Thanks to Florent Bayle for 
    the idea.  (Closes: #325802, #328088, #339482)
  * Fix example code showing how to use hooks for malloc.  (Closes: 
    bug#333565).
  * Add hurd-ioctl-decode-argument.diff (fixes decoding of ioctl 
    arguments) from Samuel Thibault.  (Closes: #320273)