@@ -16,6 +16,7 @@ glibc (2.3.6-2) UNRELEASED; urgency=low
      de_CH for LC_NUMERIC and LC_MONETARY sections.  (Closes: #345481)
    * Apply a patch from Fedora to define AM/PM strings in cy_GB and en_GB
      locales.  (Closes: #240901)
+   * Fix the week definition for the C locale.
    * Add an "All locales" option to the locales/locales_to_be_generated
      template.  When it is selected, /etc/locale.gen is a symlink to
      /usr/share/i18n/SUPPORTED.  (Closes: #321580, #323013)
